--- a/index.html
+++ b/index.html
@@ -27,7 +27,32 @@
     </ul>
    <br>
 
+
+
    <a href="https://www.linkedin.com/in/graeme-scaife-10bb8017b/">Here's a link to my LinkedIn !</a>
+  </div>
+  <br>
+  <div class="column-content">
+       <div class = "columns">
+        <h2>Interests</h2>
+         <ul>
+          <li>Football</li>
+          <li>Legal Technology</li>
+          <li>History</li>
+         </ul>
+       </div>
+       <div class = "columns">
+        <h2>Hobbies</h2>
+        <ul>
+          <li>Basketball</li>
+          <li>Reading</li>
+          <li>Cooking</li>
+        </ul>
+       </div>
+       <div class = "columns">
+        <h2>Achievements</h2>
+        <p>Graduated 9th overall in my class of 115 in UCD</p>
+       </div>
   </div>
  </body>
 </html>
