--- a/index.html
+++ b/index.html
@@ -2,89 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Curriculum Vitae</title>
-    <link rel="stylesheet" type ="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <title>Rock, Paper, Scissors</title>
+    <script src="script.js"></script>
 </head>
-
 <body>
-<div class = "container">
-    <div class = "row">
-        <div class = "col-md-12">
-            <br>
-            <h1>Graeme Scaife</h1>
-            <br>
-            <h5>Graeme.pbs@gmail.com</h5>
-            <h5>Phone: 087 964 5330</h5>
-            <h5>2 Fosterbrook, Blackrock, Dublin</h5>
-        </div>
-    </div>
-
-    <br>
-
-    <div class = "row">
-        <div class = "col-md-5">
-            <h2>Education</h2>
-            <h5>Bachelor of Business & Law - University College Dublin (2021)</h5>
-        </div>
-        <div class = "col-md-5">
-            <h2>Experience</h2>
-            <h5>Business Analyst - Brightflag (2021-2022)</h5>
-            <h5>Operations Manager - Samson Training (2018)</h5>
-        </div>
-    </div>
-
-    <br>
-
-    <div class = "row">
-        <div class = "col-md-5">
-            <h2>Skills</h2>
-            <ul>
-                <li>Research</li>
-                <li>Python</li>
-                <li>Java</li>
-                <li>Law</li>
-            </ul>
-        </div>
-        <div class = "col-md-5">
-            <h2>Interests</h2>
-            <ul>
-                <li>Football</li>
-                <li>Legal Technology</li>
-                <li>History</li>
-                <li>Coiding</li>
-            </ul>
-        </div>
-    </div>
-
-    <br>
-
-    <div class = "row">
-        <div class = "col-md-5">
-            <h2>Hobbies</h2>
-            <ul>
-                <li>Basketball</li>
-                <li>Reading</li>
-                <li>Cooking</li>
-            </ul>
-        </div>
-        <div class = "col-md-5">
-            <h2>Achievements</h2>
-            <ul>
-                <li>Graduated 9th overall in my class of 115 in UCD</li>
-                <li>Published article in the UCD Student Legal Journal</li>
-            </ul>
-        </div>
-    </div>
-
-
-
-</div>
-
-<div class="centred-content">
-    <a href="https://www.linkedin.com/in/graeme-scaife-10bb8017b/">Here's a link to my LinkedIn !</a>
-</div>
-
+<h2>Time to play!</h2>
+<button id="buttonRPS" onmousedown="playRPS()">Play Game</button>
 </body>
 </html>
